--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -76,8 +76,9 @@ ol {
 }
 
 .container {
-  width: 144rem;
+  max-width: 144rem;
   max-height: 104rem;
+  width: 100%;
   height: 95vh;
   margin: auto auto;
   border-radius: 2rem;
@@ -92,14 +93,27 @@ ol {
 
 .wrapper {
   flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.main {
   padding: 0 6rem;
+}
+
+.logo-container {
+  height: 4rem;
+  display: flex;
+  align-items: center;
+  flex-shrink: 0;
 }
 
 .main-logo {
   font-size: 2rem;
-  line-height: 100%;
+  line-height: 2rem;
   font-weight: 600;
   color: var(--text-color);
+  height: 2rem;
 }
 
 .sub-logo {
@@ -172,7 +186,86 @@ ol {
 }
 
 .header {
-  padding: 3rem 0;
+  padding: 3rem 6rem;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-shrink: 0;
+  margin-bottom: 2rem;
+}
+.header__form, .header__user {
+  display: flex;
+  align-items: center;
+}
+.header__form {
+  max-width: 62.5rem;
+  flex: 1;
+  background-color: #363441;
+  padding: 1.4rem 1.5rem 1.3rem 1.5rem;
+  border-radius: 1rem;
+}
+.header__form input[type=text] {
+  flex: 1;
+  border: none;
+  outline: none;
+  background-color: inherit;
+  font-size: 1.2rem;
+  line-height: 1.3rem;
+  font-family: inherit;
+  color: var(--body-color);
+}
+.header__user {
+  margin-left: auto;
+  margin-right: 3rem;
+  cursor: pointer;
+}
+.header__user-img {
+  border-radius: 50%;
+  flex-shrink: 0;
+}
+.header__user-img img {
+  border-radius: inherit;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.header__user-name {
+  font-size: 1.3rem;
+  line-height: 100%;
+  letter-spacing: 0.5px;
+  font-weight: 400;
+  color: var(--text-color);
+  margin: 0 0.6rem 0 1.2rem;
+}
+.header__notification {
+  position: relative;
+  cursor: pointer;
+  flex-shrink: 0;
+}
+.header__notification::after {
+  content: "";
+  width: 6px;
+  height: 6px;
+  background-color: var(--coral-color);
+  border-radius: 50%;
+  border: 1px solid transparent;
+  box-sizing: content-box;
+  position: absolute;
+  right: -2px;
+  top: -2px;
+}
+
+.discover__title {
+  font-size: 4rem;
+  line-height: 4rem;
+  font-weight: 600;
+  color: var(--text-color);
+  margin-bottom: 2.8rem;
+}
+.discover__item {
+  padding: 4rem;
+  display: flex;
+  flex-direction: column;
 }
 
 /*# sourceMappingURL=main.css.map */
