--- a/asset/sass/_header.scss
+++ b/asset/sass/_header.scss
@@ -1,3 +1,75 @@
 .header {
-   padding: 3rem 0;
+   padding: 3rem 6rem;
+   width: 100%;
+   display: flex;
+   align-items: center;
+   flex-shrink: 0;
+   margin-bottom: 2rem;
+   &__form,
+   &__user {
+      display: flex;
+      align-items: center;
+   }
+
+   &__form {
+      max-width: 62.5rem;
+      flex: 1;
+      background-color: #363441;
+      padding: 1.4rem 1.5rem 1.3rem 1.5rem;
+      border-radius: 1rem;
+      input[type="text"] {
+         flex: 1;
+         border: none;
+         outline: none;
+         background-color: inherit;
+         font-size: 1.2rem;
+         line-height: 1.3rem;
+         font-family: inherit;
+         color: var(--body-color);
+      }
+   }
+
+   &__user {
+      margin-left: auto;
+      margin-right: 3rem;
+      cursor: pointer;
+
+      &-img {
+         border-radius: 50%;
+         flex-shrink: 0;
+         img {
+            border-radius: inherit;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+         }
+      }
+
+      &-name {
+         font-size: 1.3rem;
+         line-height: 100%;
+         letter-spacing: 0.5px;
+         font-weight: 400;
+         color: var(--text-color);
+         margin: 0 0.6rem 0 1.2rem;
+      }
+   }
+
+   &__notification {
+      position: relative;
+      cursor: pointer;
+      flex-shrink: 0;
+      &::after {
+         content: "";
+         width: 6px;
+         height: 6px;
+         background-color: var(--coral-color);
+         border-radius: 50%;
+         border: 1px solid transparent;
+         box-sizing: content-box;
+         position: absolute;
+         right: -2px;
+         top: -2px;
+      }
+   }
 }
