--- a/asset/sass/_layout.scss
+++ b/asset/sass/_layout.scss
@@ -1,6 +1,7 @@
 .container {
-   width: 144rem;
+   max-width: 144rem;
    max-height: 104rem;
+   width: 100%;
    height: 95vh;
    margin: auto auto;
    border-radius: 2rem;
@@ -14,5 +15,10 @@
 
 .wrapper {
    flex: 1;
+   display: flex;
+   flex-direction: column;
+}
+
+.main {
    padding: 0 6rem;
 }
