--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -255,6 +255,9 @@ ol {
   top: -2px;
 }
 
+.discover {
+  margin-bottom: 6rem;
+}
 .discover__title {
   font-size: 4rem;
   line-height: 4rem;
@@ -262,10 +265,127 @@ ol {
   color: var(--text-color);
   margin-bottom: 2.8rem;
 }
+.discover__content {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  gap: 2.1rem;
+}
 .discover__item {
   padding: 4rem;
   display: flex;
   flex-direction: column;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 2rem;
+  height: 36.5rem;
+}
+.discover__item:first-child {
+  background-image: url("../img/image1.png");
+  background-position-y: 15%;
+}
+.discover__item:last-child {
+  background-image: url("../img/image2.png");
+}
+.discover__item-title {
+  font-weight: 600;
+  font-size: 3rem;
+  line-height: 3.6rem;
+  /* or 120% */
+  letter-spacing: 0.3px;
+  color: var(--text-color);
+}
+.discover__user {
+  display: flex;
+  align-items: center;
+}
+.discover__user-img {
+  width: 6rem;
+  height: 6rem;
+  border-radius: 50%;
+  border: 1px solid var(--text-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-shrink: 0;
+  margin-right: 1.1rem;
+  position: relative;
+}
+.discover__user-img img {
+  width: 5rem;
+  height: 5rem;
+  object-fit: cover;
+  border-radius: inherit;
+}
+.discover__user-img .tick {
+  position: absolute;
+  width: 1.6rem;
+  height: 1.6rem;
+  background-color: var(--text-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  right: 0.1rem;
+  bottom: 0.1rem;
+  box-sizing: content-box;
+}
+.discover__user-img .tick svg {
+  width: 1.2rem;
+  height: 1.2rem;
+}
+.discover__user-img .tick svg path {
+  stroke: currentColor;
+}
+.discover__user-name {
+  font-size: 1.5rem;
+  line-height: 1.5rem;
+  font-weight: 500;
+  letter-spacing: 0.5px;
+  color: var(--text-color);
+  margin-bottom: 1rem;
+}
+.discover__view-time {
+  color: var(--text-color);
+  font-size: 1.2rem;
+  line-height: 1.2rem;
+  letter-spacing: 0.5px;
+  opacity: 0.8;
+  display: flex;
+  align-items: center;
+}
+.discover__view-time span:nth-child(2) {
+  width: 5px;
+  height: 5px;
+  background-color: var(--text-color);
+  border-radius: 50%;
+  margin: 0 5px;
+}
+.discover__item:first-child .discover__user-img .tick {
+  border: 2px solid #3ab0c2;
+}
+.discover__item:first-child .discover__user-img .tick svg {
+  color: #3ab0c2;
+}
+.discover__item:last-child .discover__user-img .tick {
+  border: 2px solid #ec9d63;
+}
+.discover__item:last-child .discover__user-img .tick svg {
+  color: #ec9d63;
+}
+.discover__item:first-child .discover__item-title {
+  max-width: 23.6rem;
+  margin-bottom: 3rem;
+}
+.discover__item:last-child .discover__item-title {
+  max-width: 23rem;
+  margin-bottom: 2rem;
+}
+.discover__item:last-child .discover__user {
+  flex-direction: column-reverse;
+  align-items: flex-start;
+}
+.discover__item:last-child .discover__user-img {
+  margin-top: 2rem;
 }
 
 /*# sourceMappingURL=main.css.map */
