--- a/asset/sass/_discover.scss
+++ b/asset/sass/_discover.scss
@@ -1,4 +1,5 @@
 .discover {
+   margin-bottom: 6rem;
    &__title {
       font-size: 4rem;
       line-height: 4rem;
@@ -7,9 +8,147 @@
       margin-bottom: 2.8rem;
    }
 
+   &__content {
+      display: grid;
+      grid-template-columns: 2fr 1fr;
+      gap: 2.1rem;
+   }
+
    &__item {
       padding: 4rem;
       display: flex;
       flex-direction: column;
+      background-repeat: no-repeat;
+      background-size: cover;
+      border-radius: 2rem;
+      height: 36.5rem;
+      &:first-child {
+         background-image: url("../img/image1.png");
+         background-position-y: 15%;
+      }
+      &:last-child {
+         background-image: url("../img/image2.png");
+      }
+
+      &-title {
+         font-weight: 600;
+         font-size: 3rem;
+         line-height: 3.6rem;
+         /* or 120% */
+         letter-spacing: 0.3px;
+         color: var(--text-color);
+      }
+   }
+   &__user {
+      display: flex;
+      align-items: center;
+      &-img {
+         width: 6rem;
+         height: 6rem;
+         border-radius: 50%;
+         border: 1px solid var(--text-color);
+         display: flex;
+         align-items: center;
+         justify-content: center;
+         flex-shrink: 0;
+         margin-right: 1.1rem;
+         position: relative;
+         img {
+            width: 5rem;
+            height: 5rem;
+            object-fit: cover;
+            border-radius: inherit;
+         }
+
+         .tick {
+            position: absolute;
+            width: 1.6rem;
+            height: 1.6rem;
+            background-color: var(--text-color);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 50%;
+            right: 0.1rem;
+            bottom: 0.1rem;
+            box-sizing: content-box;
+            svg {
+               width: 1.2rem;
+               height: 1.2rem;
+
+               path {
+                  stroke: currentColor;
+               }
+            }
+         }
+      }
+      &-name {
+         font-size: 1.5rem;
+         line-height: 1.5rem;
+         font-weight: 500;
+         letter-spacing: 0.5px;
+         color: var(--text-color);
+         margin-bottom: 1rem;
+      }
+   }
+
+   &__view-time {
+      color: var(--text-color);
+      font-size: 1.2rem;
+      line-height: 1.2rem;
+      letter-spacing: 0.5px;
+      opacity: 0.8;
+      display: flex;
+      align-items: center;
+      span:nth-child(2) {
+         width: 5px;
+         height: 5px;
+         background-color: var(--text-color);
+         border-radius: 50%;
+         margin: 0 5px;
+      }
+   }
+
+   &__item:first-child &__user-img {
+      .tick {
+         border: 2px solid #3ab0c2;
+
+         svg {
+            color: #3ab0c2;
+         }
+      }
+   }
+
+   &__item:last-child &__user-img {
+      .tick {
+         border: 2px solid #ec9d63;
+
+         svg {
+            color: #ec9d63;
+         }
+      }
+   }
+
+   &__item:first-child {
+      .discover__item-title {
+         max-width: 23.6rem;
+         margin-bottom: 3rem;
+      }
+   }
+
+   &__item:last-child {
+      .discover__item-title {
+         max-width: 23rem;
+         margin-bottom: 2rem;
+      }
+
+      .discover__user {
+         flex-direction: column-reverse;
+         align-items: flex-start;
+      }
+
+      .discover__user-img {
+         margin-top: 2rem;
+      }
    }
 }
