--- a/asset/sass/main.scss
+++ b/asset/sass/main.scss
@@ -3,4 +3,8 @@
 @import "logo";
 @import "sidebar";
 @import "header";
-@import "discover";
+@import "time";
+@import "viewtime";
+@import "blog";
+@import "videocard";
+@import "videos";
