--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -70,6 +70,11 @@ img {
   display: block;
 }
 
+video {
+  max-width: 100%;
+  display: block;
+}
+
 ul,
 ol {
   list-style: none;
@@ -95,10 +100,12 @@ ol {
   flex: 1;
   display: flex;
   flex-direction: column;
+  overflow-y: auto;
 }
 
 .main {
   padding: 0 6rem;
+  padding-bottom: 6rem;
 }
 
 .logo-container {
@@ -255,96 +262,19 @@ ol {
   top: -2px;
 }
 
-.discover {
-  margin-bottom: 6rem;
-}
-.discover__title {
-  font-size: 4rem;
-  line-height: 4rem;
-  font-weight: 600;
-  color: var(--text-color);
-  margin-bottom: 2.8rem;
-}
-.discover__content {
-  display: grid;
-  grid-template-columns: 2fr 1fr;
-  gap: 2.1rem;
-}
-.discover__item {
-  padding: 4rem;
-  display: flex;
-  flex-direction: column;
-  background-repeat: no-repeat;
-  background-size: cover;
-  border-radius: 2rem;
-  height: 36.5rem;
-}
-.discover__item:first-child {
-  background-image: url("../img/image1.png");
-  background-position-y: 15%;
-}
-.discover__item:last-child {
-  background-image: url("../img/image2.png");
-}
-.discover__item-title {
-  font-weight: 600;
-  font-size: 3rem;
-  line-height: 3.6rem;
-  /* or 120% */
-  letter-spacing: 0.3px;
-  color: var(--text-color);
-}
-.discover__user {
-  display: flex;
-  align-items: center;
-}
-.discover__user-img {
-  width: 6rem;
-  height: 6rem;
-  border-radius: 50%;
-  border: 1px solid var(--text-color);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-shrink: 0;
-  margin-right: 1.1rem;
-  position: relative;
-}
-.discover__user-img img {
-  width: 5rem;
-  height: 5rem;
-  object-fit: cover;
-  border-radius: inherit;
-}
-.discover__user-img .tick {
-  position: absolute;
-  width: 1.6rem;
-  height: 1.6rem;
-  background-color: var(--text-color);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 50%;
-  right: 0.1rem;
-  bottom: 0.1rem;
-  box-sizing: content-box;
-}
-.discover__user-img .tick svg {
-  width: 1.2rem;
-  height: 1.2rem;
-}
-.discover__user-img .tick svg path {
-  stroke: currentColor;
-}
-.discover__user-name {
-  font-size: 1.5rem;
-  line-height: 1.5rem;
+.time {
+  font-size: 1rem;
+  line-height: 1rem;
   font-weight: 500;
   letter-spacing: 0.5px;
   color: var(--text-color);
-  margin-bottom: 1rem;
+  padding: 0.5rem 0.8rem;
+  background-color: rgba(36, 39, 48, 0.5);
+  display: inline-block;
+  border-radius: 0.7rem;
 }
-.discover__view-time {
+
+.view-time {
   color: var(--text-color);
   font-size: 1.2rem;
   line-height: 1.2rem;
@@ -353,39 +283,262 @@ ol {
   display: flex;
   align-items: center;
 }
-.discover__view-time span:nth-child(2) {
+.view-time span:nth-child(2) {
   width: 5px;
   height: 5px;
   background-color: var(--text-color);
   border-radius: 50%;
   margin: 0 5px;
 }
-.discover__item:first-child .discover__user-img .tick {
-  border: 2px solid #3ab0c2;
+
+.blog {
+  margin-bottom: 6rem;
 }
-.discover__item:first-child .discover__user-img .tick svg {
-  color: #3ab0c2;
+.blog__heading {
+  color: var(--text-color);
+  font-size: 4rem;
+  line-height: 4rem;
+  font-weight: 600;
+  margin-bottom: 2.8rem;
 }
-.discover__item:last-child .discover__user-img .tick {
-  border: 2px solid #ec9d63;
+.blog__content {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  gap: 2.1rem;
 }
-.discover__item:last-child .discover__user-img .tick svg {
-  color: #ec9d63;
+.blog__item {
+  position: relative;
+  background-image: url("../img/image1.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 36.5rem;
+  padding: 4rem;
+  border-radius: 2rem;
+  background-position-y: 15%;
+  display: flex;
+  flex-direction: column;
 }
-.discover__item:first-child .discover__item-title {
+.blog__item-time {
+  position: absolute;
+  bottom: 2rem;
+  right: 2rem;
+}
+.blog__item-title {
   max-width: 23.6rem;
+  font-size: 3rem;
+  line-height: 3.6rem;
+  color: var(--text-color);
+  letter-spacing: 0.3px;
   margin-bottom: 3rem;
 }
-.discover__item:last-child .discover__item-title {
+.blog__item-author {
+  display: flex;
+  align-items: center;
+}
+.blog__item-author .author-img {
+  width: 6rem;
+  height: 6rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  border: 2px solid var(--text-color);
+  position: relative;
+  margin-right: 1rem;
+}
+.blog__item-author .author-img img {
+  width: 5rem;
+  height: 5rem;
+  object-fit: cover;
+  border-radius: inherit;
+}
+.blog__item-author .author-img .tick {
+  position: absolute;
+  width: 1.6rem;
+  height: 1.6rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--text-color);
+  border-radius: 50%;
+  border: 2px solid #0daabc;
+  bottom: 0.1rem;
+  right: 0;
+}
+.blog__item-author .author-img .tick i {
+  font-size: 0.8rem;
+  color: #0daabc;
+}
+.blog__item-author .author-name {
+  font-size: 1.5rem;
+  line-height: 1.5rem;
+  font-weight: 500;
+  letter-spacing: 0.5px;
+  color: var(--text-color);
+  margin-bottom: 1rem;
+}
+.blog__item + .blog__item {
+  background-image: url("../img/image2.png");
+  background-position-y: 0;
+}
+.blog__item + .blog__item .blog__item-title {
   max-width: 23rem;
   margin-bottom: 2rem;
 }
-.discover__item:last-child .discover__user {
+.blog__item + .blog__item .blog__item-author .author-img .tick {
+  border-color: #d9a45a;
+}
+.blog__item + .blog__item .blog__item-author .author-img .tick i {
+  color: #d9a45a;
+}
+.blog__item + .blog__item .blog__item-author {
   flex-direction: column-reverse;
   align-items: flex-start;
 }
-.discover__item:last-child .discover__user-img {
-  margin-top: 2rem;
+.blog__item + .blog__item .blog__item-author .author-img {
+  margin-top: 1rem;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  border-radius: 2rem;
+  background-color: var(--video-bg);
+  cursor: pointer;
+  user-select: none;
+  position: relative;
+  overflow: hidden;
+}
+.card__time {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  z-index: 10;
+  transition: all 0.4s ease;
+}
+.card__top {
+  border-radius: 2rem 2rem 0 0;
+  height: 16rem;
+  position: relative;
+}
+.card .video-wrapper {
+  height: 16rem;
+  transition: all 0.4s ease;
+}
+.card .video-wrapper video {
+  width: 100%;
+  height: 100%;
+  max-width: 100%;
+  object-fit: cover;
+  transition: all 0.4s ease;
+}
+.card__author {
+  position: absolute;
+  right: 2rem;
+  bottom: -3rem;
+  transition: all 0.4s ease;
+}
+.card__author-img {
+  width: 6rem;
+  height: 6rem;
+  border-radius: 50%;
+  border: 2px solid var(--text-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+.card__author img {
+  width: 5rem;
+  height: 5rem;
+  object-fit: cover;
+  border-radius: inherit;
+}
+.card__author-tick {
+  position: absolute;
+  width: 1.6rem;
+  height: 1.6rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--dodgerblue-color);
+  border-radius: 50%;
+  border: 2px solid var(--video-bg);
+  right: 0;
+  bottom: 0.1rem;
+}
+.card__author-tick i {
+  font-size: 1rem;
+  color: var(--text-color);
+}
+.card__bottom {
+  padding: 2.5rem;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+.card .video-by {
+  color: #b7b9d2;
+  font-size: 1.3rem;
+  line-height: 1.3rem;
+  letter-spacing: 0.5px;
+  margin-bottom: 1.2rem;
+  position: relative;
+  transition: all 0.4s ease;
+}
+.card .video-by::after {
+  content: "";
+  width: 8px;
+  height: 8px;
+  background-color: var(--mediumseagreen-color);
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  border-radius: 50%;
+  margin-left: 1rem;
+}
+.card__title {
+  font-size: 1.6rem;
+  line-height: 2.6rem;
+  letter-spacing: 0.3px;
+  font-weight: 500;
+  color: var(--text-color);
+  margin-bottom: 1.6rem;
+  word-wrap: break-word;
+}
+.card__view-time {
+  margin-top: auto;
+}
+.card:hover .video {
+  transform: scale(1.5);
+  transform-origin: center;
+}
+.card:hover .card__author {
+  transform: scale(0.6);
+  right: -0.3rem;
+  bottom: -6.5rem;
+  z-index: 10;
+}
+.card:hover .video-by {
+  opacity: 0;
+}
+.card:hover .card__time {
+  opacity: 0;
+  visibility: hidden;
+}
+
+.videos__heading {
+  font-size: 2.8rem;
+  line-height: 2.8rem;
+  font-weight: 500;
+  color: var(--text-color);
+  margin-bottom: 2.8rem;
+}
+.videos__list {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(25.9rem, 1fr));
+  grid-auto-rows: 1fr;
+  gap: 1.5rem;
 }
 
 /*# sourceMappingURL=main.css.map */
