--- a/asset/sass/_layout.scss
+++ b/asset/sass/_layout.scss
@@ -17,8 +17,10 @@
    flex: 1;
    display: flex;
    flex-direction: column;
+   overflow-y: auto;
 }
 
 .main {
    padding: 0 6rem;
+   padding-bottom: 6rem;
 }
