--- a/asset/sass/_header.scss
+++ b/asset/sass/_header.scss
@@ -5,6 +5,13 @@
    align-items: center;
    flex-shrink: 0;
    margin-bottom: 2rem;
+   background-color: var(--bg-color);
+   position: sticky;
+   top: 0;
+   left: 0;
+   right: 0;
+   z-index: 1000;
+   border-radius: inherit;
    &__form,
    &__user {
       display: flex;
@@ -17,6 +24,7 @@
       background-color: #363441;
       padding: 1.4rem 1.5rem 1.3rem 1.5rem;
       border-radius: 1rem;
+      margin-right: 2rem;
       input[type="text"] {
          flex: 1;
          border: none;
@@ -26,6 +34,7 @@
          line-height: 1.3rem;
          font-family: inherit;
          color: var(--body-color);
+         width: 100%;
       }
    }
 
@@ -70,6 +79,23 @@
          position: absolute;
          right: -2px;
          top: -2px;
+      }
+   }
+
+   @media screen and (max-width: 767px) {
+      padding: 3rem;
+
+      &__user {
+         margin: 0;
+      }
+      &__user-name,
+      &__user img,
+      &__notification {
+         display: none;
+      }
+
+      .header__user-img img {
+         display: block;
       }
    }
 }
