--- a/asset/sass/_blog.scss
+++ b/asset/sass/_blog.scss
@@ -11,7 +11,7 @@
    &__content {
       display: grid;
       grid-template-columns: 2fr 1fr;
-      gap: 2.1rem;
+      gap: 1.5rem;
    }
 
    &__item {
@@ -117,6 +117,58 @@
 
       .blog__item-author .author-img {
          margin-top: 1rem;
+      }
+   }
+
+   @media screen and (max-width: 1023px) {
+      &__content {
+         grid-template-columns: repeat(auto-fit, minmax(25.9rem, 1fr));
+      }
+      &__item + &__item &__item-author {
+         flex-direction: unset;
+         align-items: center;
+      }
+   }
+
+   @media screen and (max-width: 767px) {
+      &__content {
+         grid-template-columns: 1fr;
+      }
+
+      &__item-title {
+         font-size: 2rem;
+         line-height: 2.6rem;
+         letter-spacing: 0.3px;
+         margin-bottom: 3rem;
+         max-width: 100%;
+      }
+
+      &__item + &__item &__item-title {
+         max-width: 100%;
+      }
+
+      &__item-author {
+         margin-top: auto;
+      }
+
+      &__item-author,
+      &__item + &__item &__item-author {
+         flex-direction: column-reverse;
+         align-items: flex-start;
+      }
+      &__item-author .author-img,
+      &__item + &__item &__item-author .author-img {
+         margin-top: 2rem;
+      }
+   }
+
+   @media screen and (max-width: 374px) {
+      &__item {
+         padding: 2rem;
+      }
+
+      .author-img {
+         transform: scale(0.8);
       }
    }
 }
