--- a/asset/sass/_layout.scss
+++ b/asset/sass/_layout.scss
@@ -11,6 +11,13 @@
    @media screen and (max-width: 1439px) {
       margin: auto 1.5rem;
    }
+
+   @media screen and (max-width: 1023px) {
+      height: 100%;
+      margin: 0;
+      max-height: 100%;
+      border-radius: 0;
+   }
 }
 
 .wrapper {
@@ -18,9 +25,16 @@
    display: flex;
    flex-direction: column;
    overflow-y: auto;
+   transition: 0.4s;
+   position: relative;
 }
 
 .main {
    padding: 0 6rem;
    padding-bottom: 6rem;
+   overflow: auto;
+
+   @media screen and (max-width: 767px) {
+      padding: 0 3rem 3rem 3rem;
+   }
 }
