--- a/asset/sass/_logo.scss
+++ b/asset/sass/_logo.scss
@@ -23,3 +23,12 @@
    justify-content: center;
    display: none;
 }
+
+@media screen and (max-width: 1023px) {
+   .main-logo {
+      display: none;
+   }
+   .sub-logo {
+      display: flex;
+   }
+}
